Fixed projects endpoint
