# internal/api/schemas/projects.go
@@ -10,3 +10,9 @@ type ProjectsListResponse struct {
 	TotalCount int              `json:"totalCount"`
 	Items      []models.Project `json:"items"`
 }
+
+type ProjectsRequest struct {
+	Name    string         `json:"name" validate:"required"`
+	GroupID int64          `json:"groupId" validate:"required"`
+	Members []AccessMember `json:"members"`
+}
